--- a/index.html
+++ b/index.html
@@ -4,9 +4,206 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My E-Commerce Website</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--navbar-->
+    <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">
+                <img src="images/panda-commerce/logo.png" alt="" srcset="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#shoes">Shoes</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#backpack">Backpack</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#subscribe">Subscribe</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+    </div>
+
+    <!--carousel part-->
+   <div class="container">
+    <div id="carouselExampleControls" class="carousel slide orange-bg" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+              <div class="row align-items-center">
+                  <div class="col-md-7">
+                      <h1>MEGA LCD TV For Sports</h1>
+                      <p>This the best TV in the world who want to waste time in front of TV.</p>
+                      <h1 class="price">$1200</h1>
+                      <button class="buy-now-button">Buy now</button>
+                  </div>
+                  <div class="col-md-5"><img src="images/panda-commerce/banner-images/tv.png" class="d-block w-100" alt="..."></div>
+              </div>
+            </div>
+          <div class="carousel-item">
+              <div class="row align-items-center">
+                  <div class="col-md-7">
+                    <h1>Cool dude Headphone</h1>
+                    <p>This the best TV in the world who want to waste time in front of TV.</p>
+                    <h1 class="price">$420</h1>
+                    <button class="buy-now-button">Buy now</button>
+                  </div>
+                  <div class="col-md-5"><img src="images/panda-commerce/banner-images/headphone.png" class="d-block w-100" alt="..."></div>
+              </div>
+            </div>
+          <div class="carousel-item">
+              <div class="row align-items-center">
+                  <div class="col-md-7">
+                    <h1>X-Box for your living room</h1>
+                    <p>This the best X-Box in the world who want to waste time in front of fake sports.</p>
+                    <h1 class="price">$600</h1>
+                    <button class="buy-now-button">Buy now</button>
+                  </div>
+                  <div class="col-md-5"><img src="images/panda-commerce/banner-images/xbox.png" class="d-block w-100" alt="..."></div>
+              </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+   </div>
+
+   <!--Categories, column gap, category in each row-->
+   <div class="container categories">
+       <div class="row">
+           <div class="col-md-4">
+               <div class="d-flex justify-content-between align-items-center cat1">
+                <h1>Watch</h1>
+                <img src="images/panda-commerce/categories/watch.png" alt="">
+               </div>
+           </div>
+           <div class="col-md-4">
+               <div class="d-flex justify-content-between align-items-center cat2">
+                <h1>Bag</h1>
+                <img src="images/panda-commerce/categories/bag.png" alt="">
+               </div>
+           </div>
+           <div class="col-md-4">
+               <div class="d-flex justify-content-between align-items-center cat3">
+                <h1>Shoes</h1>
+                <img src="images/panda-commerce/categories/shoes.png" alt="">
+               </div>
+           </div>
+       </div>
+   </div>
+
+   <!--Shoe Category, card-deck, card box shadow-->
+   <div class="container shoes" id="shoes">
+     <h3>Shoes</h3>
+     <div class="card-deck">
+      <div class="card">
+        <img src="images/panda-commerce/shoes/shoe-1.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Supply 360</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          <h5>$120</h5>
+          <button class="buy-now-button">Buy now >></button>
+        </div>
+      </div>
+      <div class="card">
+        <img src="images/panda-commerce/shoes/shoe-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Nike 360</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <h5>$320</h5>
+          <button class="buy-now-button">Buy now >></button>
+        </div>
+      </div>
+      <div class="card">
+        <img src="images/panda-commerce/shoes/shoe-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Red Airmax</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <h5>$350</h5>
+          <button class="buy-now-button">Buy now >></button>
+        </div>
+      </div>
+    </div>
+   </div>
+
+   <!--Backpack Category, card footer, align button-->
+   <div class="container backpack" id="backpack">
+     <h3>Bagpack</h3>
+     <div class="card-deck">
+      <div class="card">
+        <img src="images/panda-commerce/bags/bag-1.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Red Bagpack</h5>
+          <h5>$120</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <button class="buy-now-button">Buy now >></button>
+        </div>
+      </div>
+      <div class="card">
+        <img src="images/panda-commerce/bags/bag-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Blue Bagpack</h5>
+          <h5>$320</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <button class="buy-now-button">Buy now >></button>
+        </div>
+      </div>
+      <div class="card">
+        <img src="images/panda-commerce/bags/bag-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Black Bagpack</h5>
+          <h5>$169</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <button class="buy-now-button">Buy now >></button>
+        </div>
+      </div>
+    </div>
+   </div>
+
+   <!--Subscribe Section, Horizontal and vertical center-->
+   <div class="container d-flex justify-content-center align-items-center orange-bg" id="subscribe">
+     <div>
+      <h3>LET'S STAY IN TOUCH</h3>
+      <h6>Get updates on sales, specials and more</h6>
+      <input class="form-control" type="text">
+      <button class="buy-now-button">Submit</button>
+     </div>
+   </div>
+
+   <!--Footer, small tag, text center align-->
+   <footer>
+     <small>©2020. Panda Commerce. All rights reserved. Sofia,Bulgaria</small>
+   </footer>
+
+
     
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
